--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                                         SOFTWAREENTWICKLUNG
                                     </div>
                                     <div class="expertise-text-content-txt txt">
-                                        Java SE 8, Java EE 8, Quarkus, Microprofile, Hibernate, JavaFX, Maven, Python 3.x
+                                        Java SE 8, Java EE, Quarkus, Microprofile, Hibernate, JavaFX, Maven, 
+										<br> Python 3.x, Docker, Docker Compose
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +130,7 @@
                                     </div>
                                     <div class="expertise-text-content-txt txt">
                                         UML, BPMN 2.0, DDD (Domain Driver Design), Api-First Design, SOA, 
-                                        <br> CQRS (Command-Query Responsibility Segregation)
+                                        <br> CQRS (Command-Query Responsibility Segregation), CI/CD
                                     </div>
                                 </div>
                             </div>
@@ -157,7 +158,7 @@
                                         ON-PREM & DB
                                     </div>
                                     <div class="expertise-text-content-txt txt">
-                                        JBoss Wildfly, JBoss 6.x, 7.x, NGINX, PostgreSQL, Oracle, Neo4j, EventStore, Vault
+                                        JBoss Wildfly, JBoss 6.x, 7.x, NGINX, PostgreSQL, Oracle, Neo4j, EventStore, HashiCorp Vault
                                     </div>
                                 </div>
                             </div>
@@ -170,7 +171,7 @@
                                         WEB ENTWICKLUNG
                                     </div>
                                     <div class="expertise-text-content-txt txt">
-                                        TypeScript, Stencil.js, Angular, HTML, CSS (SCSS)
+                                        TypeScript, Stencil.js, JS, Angular, HTML, CSS (SCSS)
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +192,7 @@
                             </div>
                             <div class="scills-text-content text-content">
                                 <div class="scills-text-content-titel text-content-titel">
-                                    PROGRAMMIERSPRACHEN & FRAMEWORKS
+                                    PROGRAMMIERSPRACHEN, FRAMEWORKS & BIBLIOTHEKEN
                                 </div>
                                 <div class="scills-text-content-txt txt">
                                     Java 8, Python 3.x, TypeScript, Java EE, Quarkus, Angular, Keras
@@ -207,7 +208,7 @@
                                     DATENBANKSYSTEME
                                 </div>
                                 <div class="scills-text-content-txt txt">
-                                    PostgreSQL, Oracle, EventStore, Neo4j, Vault
+                                    PostgreSQL, Oracle, EventStore, Neo4j, HashiCorp Vault
                                 </div>
                             </div>
                         </div>
@@ -217,10 +218,11 @@
                             </div>
                             <div class="scills-text-content text-content">
                                 <div class="scills-text-content-titel text-content-titel">
-                                    CASE-TOOLS
+                                    CASE-, BUILD- & ANDERE TOOLS
                                 </div>
                                 <div class="scills-text-content-txt txt">
-                                    Maven, Git, SQLDeveloper, MS Office
+                                    Maven, Ivy, Git, SVN, Jenkins, Hudson, Bash, Docker, Docker Compose
+									<br> SQLDeveloper, MS Office, PowerBI
                                 </div>
                             </div>
                         </div>
@@ -233,7 +235,7 @@
                                     OS
                                 </div>
                                 <div class="scills-text-content-txt txt">
-                                    Windows 10, Linux (Ubuntu, Raspbian)
+                                    Windows 10, UNIX (Ubuntu, Raspbian)
                                 </div>
                             </div>
                         </div>
@@ -261,7 +263,7 @@
                                     METHODEN
                                 </div>
                                 <div class="scills-text-content-txt txt">
-                                    DDD (Domain Driver Design), CQRS (Command-Query Responsibility Segregation), UML, BPMN 2.0, EPK
+                                    DDD (Domain Driver Design), CQRS (Command-Query Responsibility Segregation), UML, BPMN 2.0, EPK, Scrum
                                 </div>
                             </div>
                         </div>
@@ -289,7 +291,7 @@
                                     SONSTIGES
                                 </div>
                                 <div class="scills-text-content-txt txt">
-                                    JSON, XML, XSD, YML, Swagger, Keycloak, VM VirtualBox, REST, GraphQL
+                                    JSON, XML, XSD, YML, Swagger, Keycloak, VM VirtualBox, REST, GraphQL, Bitbucket, JIRA
                                 </div>
                             </div>
                         </div>
@@ -349,7 +351,7 @@
                             </div>
                             <div class="experience-text-content-txt">
                                 Werkstudent in Bereichen Softwareentwicklung und Data Science.<br>
-                                <span>Bereich:</span> Logistik<br>
+                                <span>Bereich:</span> Logistik.<br>
                                 <span>Verantwortlichkeiten:</span> Business- und Anforderungsanalyse, Unterstützung bei der Erstellung der Softwarearchitektur, Softwareentwicklung.
                             </div>
                         </div>
@@ -474,6 +476,69 @@
                     <p class="titel-txt">Zertifikate und Urkunden</p>
                 </div>
                 <div class="certificate-text text">
+                    <div class="certificate-text-block">
+                        <div class="certificate-text-circle">
+                            <img class="certificate-logo" src="resources/PSDI.png" alt="Scrum PSD I"/>
+                        </div>
+                        <div class="certificate-text-content">
+                            <div class="certificate-text-content-titel">
+                                <div class="certificate-text-content-titel-time">
+                                    01.2021
+                                </div>
+                                <div class="certificate-text-content-titel-name">
+                                    Professional Scrum Developer I (PSD I)
+                                </div>
+                                <div class="certificate-text-content-titel-uni">
+                                    Scrum
+                                </div>
+                                <div class="certificate-text-content-titel-proof">
+                                    <a href="https://www.scrum.org/user/766577">Nachweis anzeigen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="certificate-text-block">
+                        <div class="certificate-text-circle">
+                            <img class="certificate-logo" src="resources/PSMI.png" alt="Scrum PSM I"/>
+                        </div>
+                        <div class="certificate-text-content">
+                            <div class="certificate-text-content-titel">
+                                <div class="certificate-text-content-titel-time">
+                                    12.2020
+                                </div>
+                                <div class="certificate-text-content-titel-name">
+                                    Professional Scrum Master I (PSM I)
+                                </div>
+                                <div class="certificate-text-content-titel-uni">
+                                    Scrum
+                                </div>
+                                <div class="certificate-text-content-titel-proof">
+                                    <a href="https://www.scrum.org/user/766577">Nachweis anzeigen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<div class="certificate-text-block">
+                        <div class="certificate-text-circle">
+                            <img class="certificate-logo" src="resources/aws-certified-solutions-architect-associate.png" alt="AWS"/>
+                        </div>
+                        <div class="certificate-text-content">
+                            <div class="certificate-text-content-titel">
+                                <div class="certificate-text-content-titel-time">
+                                    11.2020
+                                </div>
+                                <div class="certificate-text-content-titel-name">
+                                    AWS Certified Solutions Architect – Associate
+                                </div>
+                                <div class="certificate-text-content-titel-uni">
+                                    AWS Amazon
+                                </div>
+                                <div class="certificate-text-content-titel-proof">
+                                    <a href="https://www.youracclaim.com/badges/e870b832-dad4-4e60-b686-e53303b40574/public_url">Nachweis anzeigen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div class="certificate-text-block">
                         <div class="certificate-text-circle">
                             <img class="certificate-logo" src="resources/ualberta.png" alt="Uni of Alberta"/>
